# medea-turn-rs

./: .clippy.toml  .dockerignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  bin.yml  ci.yml
src/: attr.rs  chandata.rs  lib.rs  relay.rs
src/allocation/: allocation_manager.rs  channel_bind.rs  manager.rs  mod.rs  permission.rs
src/con/: mod.rs  tcp.rs
src/server/: config.rs  mod.rs  request.rs
src/transport/: mod.rs  tcp.rs
stun-bin/: Cargo.toml  README.md  config.toml
stun-bin/src/: main.rs
