[package]
name = "medea-turn"
version = "0.9.2"
edition = "2021"
rust-version = "1.81"
description = "STUN/TURN server implementation used by Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/medea-turn"
homepage = "https://github.com/instrumentisto/medea-turn-rs"
repository = "https://github.com/instrumentisto/medea-turn-rs"
readme = "README.md"
keywords = ["medea", "server", "stun", "turn"]
categories = ["network-programming", "web-programming"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md"]

[dependencies]
async-trait = "0.1.43"
bytecodec = "0.4.15"
bytes = "1.6"
derive_more = { version = "1.0.0-beta.6", features = ["debug", "display", "error", "from"] }
futures = "0.3.30"
log = "0.4"
rand = "0.8"
stun_codec = "0.3.5"
tokio = { version = "1.32", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.11", features = ["codec"] }

# TODO: Try remove once `bytecodec` is updated to new major version.
# Not really used, for surviving `minimal-versions` check only.
byteorder1 = { version = "1.5", package = "byteorder", default-features = false }
trackable02 = { version = "0.2.24", package = "trackable", default-features = false }
trackable1 = { version = "1.3", package = "trackable", default-features = false }

[dev-dependencies]
hex = "0.4"
