[package]
name = "stun-bin"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "STUN server implementation."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "stun"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-featurs = "false", features = ["derive"] }
medea-turn = { path = ".." }
serde = { version = "1.0", default-featurs = "false", features = ["derive"] }
tokio = { version = "1.46", default-featurs = "false", features = ["macros", "signal"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-featurs = "false", features = ["env-filter", "json"] }
